# alerts_bot

./: .env.example  .flake8  .gitignore  docker-compose.yml  mypy.ini
backend/: alembic.ini  celery_config.py  config.py  main.py  pyproject.toml  startup.sh  startup_celery.sh
backend/auth/: dependencies.py  routes.py  services.py
backend/database/: db.py  db_depends.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 2024_11_17_18:28_initial_migratons.py  2024_11_17_22:16_unique_tg_id.py
backend/reminder/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py  tasks.py
backend/remote_services/: amqp_connector.py  dependencies.py
backend/remote_services/telegram_alers/: services.py
backend/users/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  sevices.py  utils.py
tg_alert_bot/: Dockerfile  config.py  main.py  pyproject.toml
tg_alert_bot/filters/: time_filter.py
tg_alert_bot/handlers/: message_senders.py  other_handlers.py  user_handlers.py
tg_alert_bot/keyboards/: calendar_keyboard.py  main_menu.py  reminder_keyboards.py
tg_alert_bot/lexicon/: lexicon.py
tg_alert_bot/middlewares/: auth_middlware.py  reminder_service_middleware.py
tg_alert_bot/services/: connectors.py  message_sender.py
tg_alert_bot/services/backend/: auth.py  domen.py  exceptions.py  reminder_service.py
tg_alert_bot/state_machine/: reminder.py
